Delete unnecessary code; Add scrollbar to dashboard; Fix project selection workflow

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -13,4 +13,10 @@
 
 .dashboard-button {
     margin-left: 10px;
+    cursor: pointer;
+}
+
+.burger-menu-button {
+    cursor: pointer;
+
 }
