--- a/src/app/components/project-dashboard/project-dashboard.component.scss
+++ b/src/app/components/project-dashboard/project-dashboard.component.scss
@@ -22,4 +22,6 @@ table {
 
 .table-container {
     margin: 50px;
+    overflow-y: auto;
+    max-height: 400px;
 }
